# dou_snaptrack

./: .gitignore  00_map_page.py  00_map_pairs.py  00_map_unificado.py  04_plan_builder.py  05_cascade_cli.py  05_cascade_modular.py  05_run_cascade.py  06_bulletin_report.py  ANALISE_DEAD_CODE_PERFORMANCE.md  CORRECOES_CRITICAS_27-10-2025.md  DO1_12-09-2025_2.json  EAGENDAS_CALENDAR_README.md  INSTALACAO.md  L3_presidencia.json  MIGRACAO_ASYNC_COMPLETA_27-10-2025.md  OTIMIZACAO_UI_STARTUP.md  PLAN_EAGENDAS_ASYNC_README.md  Palavras Chaves DOU.docx  README.md  RESUMO_OTIMIZACOES_24-10-2025.md  RESUMO_OTIMIZACOES_DEADCODE_27-10-2025.md  RESUMO_OTIMIZACOES_OPCIONAIS_27-10-2025.md  Resumo.md  SOLUCAO_ERRO_PLAYWRIGHT.md  batch_config.exemplo.json  batch_config.json  batch_report.json  boletim_DO1_01-10-2025_1.docx  boletim_DO1_01-10-2025_2.docx  boletim_DO1_01-10-2025_3.docx  boletim_DO1_08-09-2025.docx  cli.py  debug_map.html  debug_opts_n3_select_fail.json  debug_output.txt  diagnostico.py  dropdown_mapper.py  estado_dou.jsonl  filters_DO1.json  (+25 more)
.github/: copilot-instructions.md
.streamlit/: config.toml
artefatos/: batch_map.json  batch_map_dyn.json  batch_map_n3.json  batch_map_v2.json  batch_pairs.json  batch_pairs_v2.json  boletim.md  boletim.md.meta.json  boletim_adv.md  boletim_adv.md.meta.json  boletim_pairs.md  boletim_pairs.md.meta.json  cascade_single.json  grupos_n1_por_subconjunto.json  grupos_n1_por_subconjunto_full.json  list_n1.json  map_DO1.json  map_DO1_08-09-2025.json  map_DO1_debug_roots.json  map_DO1_labels_fixed.json  map_DO1_open.json  matriz_pairs.csv  pairs_DO1.json  pairs_DO1_full.backup.json  pairs_DO1_full.json  pairs_DO1_id.json  pairs_DO1_id_debug.json  pairs_DO1_id_debug2.json  pairs_DO1_test.json  pairs_eagendas_20251103_095153.json  pairs_eagendas_latest.json  pairs_eagendas_test_optimized.json  plan_L1L2_20.json  plan_live_L1L2_20.json  plan_live_L1L2_20_topics.json  plan_live_sections_10-11-2025.json  temp_formatted.json  test_bulletin.md  test_bulletin2.md  topics.json
boletins/: DOU_FINAL_L1L2_20.docx  DOU_FINAL_TOPICS.docx  boletim_08-09-2025.docx
core/: dropdown.py  element.py  locators.py  navigation.py  selectors.py
dev_tools/: DIAGNOSTICO_ASYNC_FINAL.md  FINAL_PATCHED_boletim.md  README.md  RELATORIO_TESTE_10JOBS_COMPLETO.md  RELATORIO_TESTE_EXECUCAO_REAL.md  RELATORIO_TESTE_ROBUSTEZ_3JOBS.md  RESUMO_FINAL_24-10-2025.md  SOLUCAO_FINAL_ASYNC_27-10-2025.md  analyze_plan_live_sections.py  analyze_resumos.py  audit_n1_n2_pairs.py  benchmark_waits.py  check_bulletin_file.py  check_educacao_summaries.py  check_enrich.py  check_retificacao_json.py  check_titulo_only.py  clean_debug.py  debug_retificacao.txt  debug_stderr.txt  find_retificacao.py  test_article_extraction.py  test_async_detailed.py  test_async_migration.py  test_async_simple.py  test_async_with_real_date.py  test_asyncio.py  test_asyncio_loop.py  test_asyncio_loop2.py  test_clean_step_by_step.py  test_debug_boletim7.md  test_debug_full.py  test_eagendas_full_flow.py  test_final.txt  test_full_flow.py  test_item_texto.py  test_md_generator.py  test_monkey_patch.py  test_output.txt  test_output2.txt  (+12 more)
docs/: ANALISE_COMPARATIVA_NOV19_ATUAL.md  ANALISE_PERFORMANCE_BATCH_SUBPROCESS.md  CHANGELOG.md  COMPLEXITY_PHASE2_ROADMAP.md  COMPLEXITY_REDUCTION_REPORT.md  EAGENDAS_AUTO_UPDATE.md  EAGENDAS_DOCUMENT.md  EAGENDAS_FAST_QUICKSTART.md  EAGENDAS_INFRASTRUCTURE.md  EAGENDAS_INTEGRATION.md  EAGENDAS_PERFORMANCE_ANALYSIS.md  EFFICIENCY_ANALYSIS.md  INSTALACAO_SEM_ADMIN.md  INSTALL_TROUBLESHOOTING.md  MODULE_AUDIT.md  PAIRS_UPDATER.md  PLANO_TESTE_BATCH_DOU.md  RELATORIO_TESTES_EAGENDAS.md  ROADMAP_MELHORIAS.md  RUFF_AVISOS_DETALHADOS.md  RUFF_CONFIGURACAO.md  SPRINT_PERFORMANCE_OPTIMIZATION.md  TESTING_GUIDE.md
dou_utils/: advanced_summary.py  batch_utils.py  bulletin_utils.py  constants.py  dedup_state.py  dropdown_strategies.py  dropdown_utils.py  filter_utils.py  hash_utils.py  query_utils.py  selection_utils.py  selectors.py  url_utils.py
installer/: DouSnapTrack.iss  README.md  launch_ui.vbs  launch_ui_managed.vbs  run_silent_install.ps1
logs/: benchmark_results.json  dou.log.1  dou.log.2  final.md  list_DO1.json  splash_server.py  state.jsonl  ui_deps_ok.flag  ui_loading.html  unused.docx
mappers/: page_mapper.py  pairs_mapper.py
planos/: _tmp_comparativo_run.json  comparativo.json  dou2.json  dou22.json  eagendas_plan_medium.json  eagendas_plan_small.json  eagendas_plan_specific.json  plan_31-10-2025.json  planodeteste.json  planomelhorias_17-10-2025.json  planoteste_21-10-2025.json  teste1.json  teste2.json  teste3.json  teste4.json  teste5.json  teste6.json  testeLuiza.json
resultados/: batch_report.json  boletim_planomelhorias_17-10-2025_17-10-2025.md  eagendas_eventos_2025-12-03_2025-12-03_20251203_111022.json  eagendas_eventos_2025-12-03_2025-12-03_20251203_143244.docx  eagendas_eventos_2025-12-03_2025-12-03_20251203_143244.json  job10_DO1_10-11-2025_10.json  job11_DO1_10-11-2025_11.json  job12_DO1_10-11-2025_12.json  job13_DO1_10-11-2025_13.json  job14_DO1_10-11-2025_14.json  job15_DO1_10-11-2025_15.json  job1_DO1_10-11-2025_1.json  job2_DO1_10-11-2025_2.json  job3_DO1_10-11-2025_3.json  job4_DO1_10-11-2025_4.json  job5_DO1_10-11-2025_5.json  job6_DO1_10-11-2025_6.json  job7_DO1_10-11-2025_7.json  job8_DO1_10-11-2025_8.json  job9_DO1_10-11-2025_9.json
saidas/: DO1_08-09-2025_10.json  (+21 more)
(+617 files in other folders)
